kubernetes/apps/erp/odoo/app/httproute-web.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: odoo-web
  annotations:
    external-dns/is-public: "false"
    hajimari.io/enable: "false"
spec:
  hostnames:
    - "shodo.${SECRET_DOMAIN_4}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: odoo
          port: 8069
