kubernetes/apps/erp/odoo/app/ingress_web.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-web
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-odoo@kubernetescrd"
    # Kommentare wurden entfernt, da diese Einstellungen jetzt in der Middleware enthalten sind
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "shodo.${SECRET_DOMAIN_4}"
      secretName: "shodo.${SECRET_DOMAIN_4//./-}-prod-tls"
  rules:
    - host: shodo.${SECRET_DOMAIN_4}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
